--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1274475083";
+    var serviceWorkerVersion = "358593734";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -53,12 +53,12 @@
 
  <!-- ADD the website of the app-->
 
-<script>
-        if (localStorage.getItem("visited")) {
-        window.location.href = "https://www.google.com";
-    }
-    localStorage.setItem("visited", "true");
-</script>
+<!--<script>-->
+<!--        if (localStorage.getItem("visited")) {-->
+<!--        window.location.href = "https://www.google.com";-->
+<!--    }-->
+<!--    localStorage.setItem("visited", "true");-->
+<!--</script>-->
 
 
  <script type="text/javascript">
