--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
  <!-- ADD the website of the app-->
 
-<!--<script>-->
-<!--        if (localStorage.getItem("visited")) {-->
-<!--        window.location.href = "https://www.google.com";-->
-<!--    }-->
-<!--    localStorage.setItem("visited", "true");-->
-<!--</script>-->
+<script>
+        if (localStorage.getItem("visited")) {
+        window.location.href = "https://www.google.com";
+    }
+    localStorage.setItem("visited", "true");
+</script>
 
 
  <script type="text/javascript">
