--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://najib-mrh.github.io/smileysurveyapp/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "358593734";
+    var serviceWorkerVersion = "2846416511";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -82,6 +82,30 @@
     });
   </script>
 
+<script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBmgqaWXhMOGB7YB-FRKg0Axq6Mci0tan8",
+        authDomain: "smileysurveypilote.firebaseapp.com",
+        databaseURL: "https://smileysurveypilote-default-rtdb.firebaseio.com",
+        projectId: "smileysurveypilote",
+        storageBucket: "smileysurveypilote.appspot.com",
+        messagingSenderId: "192371799333",
+        appId: "1:192371799333:web:69572b884250311ced96cc",
+        measurementId: "G-TLV0DT9ERY"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
 
 </body>
 </html>
