--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="smileysurvey_pilote">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="theme-color" content="#000000">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
